<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorNaviHeaderBackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="24dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/btn_nav_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@drawable/ic_exit_black_24dp"
            android:drawablePadding="3dp"
            android:drawableTint="@color/colorTextSecondary"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/nav_header_logout"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_nav_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:adjustViewBounds="false"
            android:clickable="true"
            android:contentDescription="@string/nav_header_settings"
            android:focusable="true"
            android:padding="6dp"
            android:src="@drawable/ic_settings_black_24dp"
            android:tint="@color/colorTextSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_nav_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="4dp"
        android:paddingEnd="8dp">

        <ImageView
            android:id="@+id/iv_nav_profile"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/nav_header_desc"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nav_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="3dp"
            android:text="@string/nav_header_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_nav_profile"
            app:layout_constraintTop_toTopOf="@id/iv_nav_profile" />

        <TextView
            android:id="@+id/tv_nav_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorTextSecondary"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/iv_nav_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_nav_nickname" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_nav_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorArticleListItemLine" />

    <LinearLayout
        android:id="@+id/layout_nav_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nav_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_article"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nav_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_comment"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nav_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_visit"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/view_nav_footer_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorArticleListItemLine"
        android:visibility="gone" />


</LinearLayout>
