<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_streamer"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/img_streamer"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_streamerpage_streamer_icon"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:src="@drawable/icon_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_streamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="김진우"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/layout_icons"
        app:layout_constraintStart_toEndOf="@id/img_streamer"
        app:layout_constraintTop_toTopOf="@id/img_streamer"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/icon_streamer_live"
        android:padding="4dp"
        android:text="● 뱅온"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/tv_streamer"
        app:layout_constraintStart_toEndOf="@id/tv_streamer"
        app:layout_constraintTop_toTopOf="@id/tv_streamer" />

    <LinearLayout
        android:id="@+id/layout_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/article_list_header_bg_icons"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_streamer"
        app:layout_constraintTop_toBottomOf="@id/tv_streamer">

        <ImageView
            android:id="@+id/btn_twitch"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/content_description_streamerpage_twitch"
            android:focusable="true"
            android:src="@drawable/article_list_header_icon_twitch"
            android:tint="@android:color/holo_purple" />

        <ImageView
            android:id="@+id/btn_youtube"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginStart="15dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/content_description_streamerpage_youtube"
            android:focusable="true"
            android:src="@drawable/article_list_header_icon_youtube"
            android:tint="@android:color/holo_red_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>